# gcs_rust

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.cursor/rules/: gcs-rust-workspace.mdc
.github/workflows/: rust.yml
crates/geotiff_slicer/: Cargo.toml  README.md
crates/geotiff_slicer/src/: decoder.rs  lib.rs  lzw.rs  mercator.rs  parser.rs  png.rs  slicer.rs
crates/geotiff_slicer/src/api/: geotiff.rs  mod.rs
crates/rtcm3_parser/: Cargo.toml  README.md
crates/rtcm3_parser/src/: crc24q.rs  frame.rs  lib.rs  main.rs  parser.rs
crates/rtcm3_parser/tests/: parser.rs
crates/rtk_base_emulator/: Cargo.toml  README.md
crates/rtk_base_emulator/src/: emulator.rs  lib.rs  main.rs  rtk_base_emulator_state.rs  server.rs
crates/rtk_base_emulator/src/control/: control_panel_ui.rs  control_server.rs  mod.rs
crates/rtk_base_emulator/src/rtcm/: bit_writer.rs  frame_builder.rs  mod.rs
crates/rtk_base_emulator/src/ubx/: cfg_handler.rs  codec.rs  ecef.rs  frame.rs  keys.rs  mod.rs  nav_encoder.rs  stream_parser.rs
crates/rtk_base_emulator/tests/: public_api.rs
crates/ublox_ubx_parser/: Cargo.toml  README.md  build.rs
crates/ublox_ubx_parser/native/: ublox_ubx_parser.h  ubx_parser.c  wrapper.h
crates/ublox_ubx_parser/src/: ffi.rs  keys.rs  lib.rs  parser.rs  types.rs
crates/ublox_ubx_parser/tests/: parser.rs  ublox_ubx_parser_test.rs
