[workspace]
resolver = "2"
members = [
  "crates/rtcm3_parser",
  "crates/rtk_base_emulator",
  "crates/ublox_ubx_parser",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
rtcm3_parser = { path = "crates/rtcm3_parser" }
ublox_ubx_parser = { path = "crates/ublox_ubx_parser" }
