[package]
name = "rtk_base_emulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rtcm3_parser = { workspace = true }
axum = { version = "0.8.9", features = ["ws"] }
chrono = "0.4.45"
futures-util = "0.3.33"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
